Refactor controllers and generate api docs.
